--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,18 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='../public/css/bulma.min.css'>
+    <title>Document</title>
+</head>
+<body>
 
-
-{% block title %} Tourister - Tours By Locals {% endblock %}
-
-
-{% block scripts %}
-INSERT CUSTOM SCRIPTS HERE!
-{% endblock %}
-
-
-{% block content %}
-<section class='hero'>
-    <div class="hero-body">
-        <div class='box'></div>
-    </div>
-</section>
-{% endblock %}
+    <section class='hero'>
+        <div class='hero-body'>
+            
+        </div>
+    </section>
+    
+</body>
+</html>
