Changed to flask syntax

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,21 @@
 <html lang="en">
 
 <head>
+  {% block head %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tourister - Tours by locals.</title>
   <link rel="stylesheet" href="/css/bulma.min.css">
   <link rel="stylesheet" href="/css/navbar.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+  {% endblock %}
+
+  {% block scripts %}
+  {% endblock %}
 </head>
 
 <body>
+  {% block nav %}
   <nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
     <div class="container">
       <div class="navbar-brand">
@@ -79,6 +85,10 @@
       </div>
     </div>
   </nav>
+  {% endblock %}
+
+  {% block content %}
+  {% endblock%}
 </body>
 
 </html>
