--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='../public/css/bulma.min.css'>
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-    <section class='hero'>
-        <div class='hero-body'>
-            
+
+{% block content %}
+<section class='hero'>
+    <div class='hero-body'>
+        <div class='box'>
+            <h1 class='title has-text-weight-bold'>Bishan Nightlife</h1>
+
+            <p>Explore the night life of Bishan</p>
         </div>
-    </section>
-    
-</body>
-</html>
+    </div>
+</section>
+{% endblock %}
