--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
         <div class="navbar-end">
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-item">
-              <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+              <div class="listing-author-pfp" style="background-image: url('/pfp.jpg');"></div>
             </a>
 
             <div class="navbar-dropdown">
