--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -18,3 +18,8 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.vertical .listing-img {
+    width: 100%;
+    height: 10rem;
+}
