Added wishlist to navbar profile dropdown

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,10 +67,13 @@
                 <p>HideThePain69</p>
               </div>
               <a class="navbar-item">
-                My profile
+                Your profile
               </a>
               <a class="navbar-item">
-                My bookings
+                Your bookings
+              </a>
+              <a class="navbar-item">
+                Your wishlist
               </a>
               <a class="navbar-item">
                 Account settings
