Added Bookings page (WIP)

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
               <a class="navbar-item">
                 Your profile
               </a>
-              <a class="navbar-item">
+              <a href="/bookings" class="navbar-item">
                 Your bookings
               </a>
               <a class="navbar-item">
