--- a/templates/base.html
+++ b/templates/base.html
@@ -33,19 +33,33 @@
 
       <div class="navbar-menu">
         <div class="navbar-start">
+
           <a class="navbar-item" href="/">
             Home
           </a>
 
-          <a class="navbar-item" href="/discover">
-            Discover
-          </a>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Discover
+            </a>
+    
+            <div class="navbar-dropdown">
+              <a class="navbar-item" href='{{url_for("market")}}'>
+                Marketplace
+              </a>
+              <a class="navbar-item" href='{{url_for("makelisting")}}'>
+                Make a Listing
+              </a>
+            </div>
+          </div>
+          
           <a class="navbar-item" href="/help">
             Helpdesk
           </a>
+
         </div>
 
-        {% if info.status == 'yes' %}
+
         <div class="navbar-end">
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-item">
@@ -55,10 +69,13 @@
             <div class="navbar-dropdown">
               <div class="has-background-light p-4 mb-2">
                 <p class="has-text-weight-bold">Logged in as</p>
-                <p>{{ info.name }}</p>
+                <p>HidethePain69</p>
               </div>
               <a class="navbar-item">
                 Your profile
+              </a>
+              <a class="navbar-item" href={{url_for("ownlisting")}}>
+                Your listings
               </a>
               <a class="navbar-item">
                 Your bookings
@@ -77,9 +94,9 @@
           </div>
         </div>
 
-        {% else %}
 
-        <div class="navbar-end">
+
+        <!-- <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
               <a class="button is-info is-light" href='/signup'>
@@ -90,75 +107,12 @@
               </a>
             </div>
           </div>
-        </div>
-
-        {% endif %}
+        </div> -->
 
 
     </div>
   </nav>      
       
-
-
-  <!-- <nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
-    <div class="container">
-      <div class="navbar-brand">
-        <a class="navbar-item has-text-weight-bold" href="/">Tourister</a>
-
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
-      </div>
-
-      <div class="navbar-menu">
-        <div class="navbar-start">
-          <a class="navbar-item" href="/">
-            Home
-          </a>
-
-          <a class="navbar-item" href="/discover">
-            Discover
-          </a>
-          <a class="navbar-item" href="/help">
-            Helpdesk
-          </a>
-        </div>
-      
-        <div class="navbar-end">
-          <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-item">
-              <div class="listing-author-pfp" style="background-image: url('/pfp.jpg');"></div>
-            </a>
-
-            <div class="navbar-dropdown">
-              <div class="has-background-light p-4 mb-2">
-                <p class="has-text-weight-bold">Logged in as</p>
-                <p>HideThePain69</p>
-              </div>
-              <a class="navbar-item">
-                Your profile
-              </a>
-              <a class="navbar-item">
-                Your bookings
-              </a>
-              <a class="navbar-item">
-                Your wishlist
-              </a>
-              <a class="navbar-item">
-                Account settings
-              </a>
-              <hr class="navbar-divider">
-              <a class="navbar-item">
-                <i class="fas fa-sign-out-alt"></i>&ensp;Sign out
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav> -->
   {% endblock %}
 
   {% block content %}
