Updates to Bookings page

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
               <a class="navbar-item" href={{url_for("ownlisting")}}>
                 Your listings
               </a>
-              <a href="/bookings" class="navbar-item">
+              <a class="navbar-item" href={{url_for("bookings")}}>
                 Your bookings
               </a>
               <a class="navbar-item">
