Edited rating and review

--- a/templates/review.html
+++ b/templates/review.html
@@ -3,12 +3,13 @@
 {% block scripts %}
 <link rel="stylesheet" href="/css/shop.css">
 <link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/rating.css">
 {% endblock %}
 
 {% block content %}
 <section class="section">
     <div class='box p-5'>
-        <h1 class="title">Let's rate your tour experience</h1>
+        <h1 class="title has-text-centered">Let's rate your tour experience</h1>
             <div class="columns is-vcentered">
                 <div class="column">
                     <div class="ml-4">
@@ -28,6 +29,18 @@
                     <div class="box listing-img" style="background-image: url('/public/places/bishan.jpg');"></div>
                 </div>
             </div>
+        <div class="rate">
+            <input type="radio" id="star5" name="rate" value="5" />
+            <label for="star5" title="text">5 stars</label>
+            <input type="radio" id="star4" name="rate" value="4" />
+            <label for="star4" title="text">4 stars</label>
+            <input type="radio" id="star3" name="rate" value="3" />
+            <label for="star3" title="text">3 stars</label>
+            <input type="radio" id="star2" name="rate" value="2" />
+            <label for="star2" title="text">2 stars</label>
+            <input type="radio" id="star1" name="rate" value="1" />
+            <label for="star1" title="text">1 star</label>
+        </div>
         </div>
 </section>
 {% endblock %}
