--- a/templates/review.html
+++ b/templates/review.html
@@ -4,43 +4,79 @@
 <link rel="stylesheet" href="/css/shop.css">
 <link rel="stylesheet" href="/css/index.css">
 <link rel="stylesheet" href="/css/rating.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"/>
 {% endblock %}
 
 {% block content %}
-<section class="section">
-    <div class='box p-5'>
-        <h1 class="title has-text-centered">Let's rate your tour experience</h1>
-        <div class="columns is-vcentered">
-            <div class="column">
-                <div class="ml-4">
-                    <div class="mb-2 listing-author">
-                        <div class="profile-img" style="background-image: url('/public/pfp.jpg');"></div>
-                        <div class="ml-2"><b>HideThePain69</b></div>
+<section class='section'>
+    <div class="content has-text-centered">
+        <h1>Rate your tour experience!</h1>
+    </div>
+
+    <div class='columns is-centered'>
+        <div class='column is-half'>
+            <div class='box'>
+                <div class="columns is-vcentered">
+                    <div class="column">
+
+                        <div class="ml-4">
+                            <div class="mb-2 listing-author">
+                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="ml-2"><b>HideThePain69</b></div>
+                            </div>
+                            <h1 class='title'>Bishan Nightlife</h1>
+                            <p class="subtitle">Explore the night life of Bishan</p>
+                            <br>
+                        </div>
                     </div>
-                    <h1 class='title'>Bishan Nightlife</h1>
-                    <p class="subtitle">Explore the night life of Bishan</p>
-                    <p class="has-text-weight-light is-size-2 has-text-dark"><small class="is-size-5">From</small>
-                        $100
-                    </p>
-                    <br>
+                    <div class="column">
+                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="column">
-                <div class="box listing-img" style="background-image: url('/public/places/bishan.jpg');"></div>
+                <form class="form-horizontal">
+                    <fieldset>
+                        <div class="field">
+                            <div class="rating control">
+                                <label class="radio">
+                                    <input type="radio" name="rating" id="star5" value="5" class="radio_input">
+                                    <label for="star5"><i class="far fa-star"></i></label>
+                                    <input type="radio"  name="rating" id="star4" value="4" class="radio_input">
+                                    <label for="star4"><i class="far fa-star"></i></label>
+                                    <input type="radio" name="rating" id="star3" value="3" class="radio_input">
+                                    <label for="star3"><i class="far fa-star"></i></label>
+                                    <input type="radio" name="rating"  id="star2" value="2" class="radio_input">
+                                    <label for="star2"><i class="far fa-star"></i></label>
+                                    <input type="radio" name="rating" id="star1"  value="1" class="radio_input">
+                                    <label for="star1"><i class="far fa-star"></i></label>
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label class="label" for="review">Leave a review</label>
+                            <div class="control">
+                                <textarea class="textarea"
+                                          placeholder="What were some things you enjoyed about this experience? How can it be improved?"
+                                          id="review" name="review"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label class="label" for="review-submit"></label>
+                            <div class="control">
+                                <button id="review-submit" name="review-submit"
+                                        class="button is-success is-medium is-fullwidth">Submit your review
+                                </button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
             </div>
         </div>
-        <div class="rate">
-                <input type="radio" id="star5" name="rate" value="5"/>
-                <label for="star5" title="text">5 stars</label>
-                <input type="radio" id="star4" name="rate" value="4"/>
-                <label for="star4" title="text">4 stars</label>
-                <input type="radio" id="star3" name="rate" value="3"/>
-                <label for="star3" title="text">3 stars</label>
-                <input type="radio" id="star2" name="rate" value="2"/>
-                <label for="star2" title="text">2 stars</label>
-                <input type="radio" id="star1" name="rate" value="1"/>
-                <label for="star1" title="text">1 star</label>
-            </div>
     </div>
 </section>
+
+
 {% endblock %}
