Changed profile img class

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,10 +63,10 @@
         <div class="navbar-end">
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-item">
-              <div class="listing-author-pfp" style="background-image: url('/pfp.jpg');"></div>
+              <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
             </a>
 
-            <div class="navbar-dropdown">
+            <div class="navbar-dropdown is-boxed is-right">
               <div class="has-background-light p-4 mb-2">
                 <p class="has-text-weight-bold">Logged in as</p>
                 <p>HidethePain69</p>
