--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -2,6 +2,7 @@
     display: inline-block;
     vertical-align: middle;
 }
+
 .listing-author-pfp {
     height: 2rem;
     width: 2rem;
@@ -22,4 +23,21 @@
 .vertical .listing-img {
     width: 100%;
     height: 10rem;
+}
+
+div.container.searchbar {
+    padding: 0 20rem
+}
+
+@media only screen and (max-width: 1215px) {
+    div.container.searchbar {
+        padding: 0 8rem
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    div.container.searchbar {
+        padding-left: 1rem;
+        padding-right: 1rem
+    }
 }
