--- a/templates/customer/index-customer.html
+++ b/templates/customer/index-customer.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<section class="hero is-large is-primary is-bold">
+<section class="hero is-medium is-black">
     <div class="hero-body">
       <div class="container">
         <h1 class="title is-size-1 has-text-weight-bold">
