--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -4,9 +4,6 @@
 <link rel="stylesheet" href="/css/shop.css">
 <link rel="stylesheet" href="/css/index.css">
 <link rel="stylesheet" href="/css/rating.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-      crossorigin="anonymous"/>
 {% endblock %}
 
 {% block content %}
@@ -20,7 +17,6 @@
             <div class='box'>
                 <div class="columns is-vcentered">
                     <div class="column">
-
                         <div class="ml-4">
                             <div class="mb-2 listing-author">
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
@@ -38,36 +34,20 @@
                 <form class="form-horizontal">
                     <fieldset>
                         <div class="field">
-                            <div class="rating control">
-                                <label class="radio">
-                                    <input type="radio" name="rating" id="star5" value="5" class="radio_input">
-                                    <label for="star5"><i class="far fa-star"></i></label>
-                                    <input type="radio"  name="rating" id="star4" value="4" class="radio_input">
-                                    <label for="star4"><i class="far fa-star"></i></label>
-                                    <input type="radio" name="rating" id="star3" value="3" class="radio_input">
-                                    <label for="star3"><i class="far fa-star"></i></label>
-                                    <input type="radio" name="rating"  id="star2" value="2" class="radio_input">
-                                    <label for="star2"><i class="far fa-star"></i></label>
-                                    <input type="radio" name="rating" id="star1"  value="1" class="radio_input">
-                                    <label for="star1"><i class="far fa-star"></i></label>
-                                </label>
-                            </div>
+
                         </div>
 
                         <div class="field">
                             <label class="label" for="review">Leave a review</label>
                             <div class="control">
-                                <textarea class="textarea"
-                                          placeholder="What were some things you enjoyed about this experience? How can it be improved?"
-                                          id="review" name="review"></textarea>
+                                <textarea class="textarea" placeholder="What were some things you enjoyed about this experience? How can it be improved?" id="review" name="review"></textarea>
                             </div>
                         </div>
 
                         <div class="field">
                             <label class="label" for="review-submit"></label>
                             <div class="control">
-                                <button id="review-submit" name="review-submit"
-                                        class="button is-success is-medium is-fullwidth">Submit your review
+                                <button id="review-submit" name="review-submit" class="button is-success is-medium is-fullwidth">Submit your review
                                 </button>
                             </div>
                         </div>
