--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                     <a class="navbar-item" href="/s/" class="has-tooltip-arrow has-tooltip-bottom" data-tooltip="Tooltip content on top">
                         
                     </a>
-                    <a class="navbar-item has-text-primary-dark" href="{{url_for('sellerModeDir')}}">
+                    <a class="navbar-item has-text-primary-dark" href="{{url_for('sellerDashboard')}}">
                         <i class="fas fa-arrow-right"></i>&ensp;Tour Guide mode
                     </a>
                     <a class="navbar-item" href="/chat">
