--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -6,30 +6,70 @@
 {% endblock %}
 
 {% block content %}
-<section class="hero is-fullheight has-text-centered">
-    <div class="hero-body has-text-centered">
-      <div class="login">
-        <img src="https://logoipsum.com/logo/logo-1.svg" width="325px" />
-        <form method='POST'>
-          <div class="field">
-            <div class="control">
-              <input class="input is-medium is-rounded" name='username' type="text" placeholder="Name" required />
+<section class="section">
+    <div class="container" id="main">
+        <div id="login">
+            <h1 class="title">Login to your Tourister ID</h1>
+            <h3 class="subtitle">Welcome back! Ready to ride some tour guides?</h3>
+            <div id="emailConfirmed" class="notification is-success" style="display: none;">
+                Your email has been verified.
             </div>
-          </div>
-          <div class="field">
-            <div class="control">
-              <input class="input is-medium is-rounded" type="password" placeholder="**********" required />
+            <div id="badLogin" class="notification is-danger" style="display: none;">
+                Email or password is invalid.
             </div>
-          </div>
-          <br>
+            <form id="loginForm">
+                <div class="field">
+                    <div class="control has-icons-left">
+                        <input id="loginEmail" class="input" type="text" placeholder="Email">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-user"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control has-icons-left">
+                        <input id="loginPassword" class="input" type="password" placeholder="Password">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-key"></i>
+                        </span>
+                    </div>
+                </div>
+                <br>
+                <div class="buttons">
+                    <a class="button is-light has-text-grey" data-pjax='main' href="./signup"><i
+                            class="fas fa-user-plus"></i>&ensp;Get an account</a>
+                    <a class="button is-light has-text-grey" data-pjax='main' href="./resetpassword"><i
+                            class="fas fa-question-circle"></i>&ensp;Lost password</a>
+                    <a class="button is-primary">Login&ensp;<i class="fas fa-arrow-right"></i></a>
+                </div>
+            </form>
+        </div>
 
-          <button class="button is-block is-fullwidth is-primary is-medium is-rounded" name='submit_button' type="submit" value='yes'>
-            Login
-          </button>
-        </form>
-        <br>
-        
-      </div>
+        <div id="emailConfirmation" style="display: none;">
+            <h2 class="title is-3">Almost done!</h2>
+            <p id="loginSuccessText" class="subtitle is-6">Please verify your email</p>
+            <div id="tooFastEmail" class="notification is-danger" style="display: none;">
+                Resending emails too quickly.
+            </div>
+            <p>We have sent to a verification link to <b id="emailSentTo"></b>. Please click on it to verify your
+                account with your email.<br><br>Afterwards, you may start using your account.</p>
+            <br>
+            <button id="resendEmailButton" class="button is-light"><i class="fas fa-paper-plane"></i>&ensp;Resend
+                Email</button>
+        </div>
+
+        <div id="accountSuspended" style="display: none;">
+            <h2 class="title is-3">Account Suspended</h2>
+            <p id="loginSuccessText" class="subtitle is-6">Unable to log you in</p>
+            <p>Your account has been suspended by the site's administrator.</p>
+            <small>Please contact the site's administrator for more information.</small>
+        </div>
+
+        <div id="authorised" style="display: none;">
+            <h2 class="title is-3 has-text-centered">Verifying</h2>
+            <p class="subtitle is-5 has-text-centered">Please wait</p>
+        </div>
     </div>
 </section>
+
 {% endblock %}
